Use console runtime packaging on macOS